HashTable/hashtable/compiling_error.txt
In file included from /Users/onatalia86/Documents/ED1/HashTable/hashtable/mainht.c:3:
/Users/onatalia86/Documents/ED1/HashTable/hashtable/hashtable.c:20:18: error: no member named 'first' in 'struct tnode'
                hashtable[i]->first= NULL;
                ~~~~~~~~~~~~  ^
/Users/onatalia86/Documents/ED1/HashTable/hashtable/hashtable.c:21:19: error: no member named 'size' in 'struct tnode'
                hashtable[i]->size= 0;
                ~~~~~~~~~~~~  ^
/Users/onatalia86/Documents/ED1/HashTable/hashtable/mainht.c:15:2: warning: implicit declaration of function 'loadDic' is invalid in C99 [-Wimplicit-function-declaration]
        loadDic(hashtable);
        ^
1 warning and 2 errors generated.
